force-app/main/default/objects/Product2/fields/Altura__c.field-meta.xml
<CustomField>
    <fullName>Altura__c</fullName>
    <label>Altura</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>