force-app/main/default/objects/Product2/fields/Ancho__c.field-meta.xml
<CustomField>
    <fullName>Ancho__c</fullName>
    <label>Ancho</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>