force-app/main/default/objects/Product2/fields/BoxXPal__c.field-meta.xml
<CustomField>
    <fullName>BoxXPal__c</fullName>
    <description>Number of boxes in a pallet</description>
    <label>Box/Pallet</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>