force-app/main/default/objects/Product2/fields/CatalogCategory__c.field-meta.xml
<CustomField>
    <fullName>CatalogCategory__c</fullName>
    <description>Catalog Category of the product</description>
    <label>Catalog Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductCatalogCategories</valueSetName>
    </valueSet>
</CustomField>