force-app/main/default/objects/Product2/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <label>Codigo</label>
    <type>TextArea</type>
</CustomField>