force-app/main/default/objects/Product2/fields/GrupoArticulos__c.field-meta.xml
<CustomField>
    <fullName>GrupoArticulos__c</fullName>
    <label>XXXGrupoArticulos</label>
    <length>9</length>
    <type>Text</type>
</CustomField>