force-app/main/default/objects/Product2/fields/IsSample__c.field-meta.xml
<CustomField>
    <fullName>IsSample__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set nthis checkbox when the porduct is a sample</description>
    <label>Is Sample</label>
    <type>Checkbox</type>
</CustomField>