force-app/main/default/objects/Product2/fields/IsSpecialTile__c.field-meta.xml
<CustomField>
    <fullName>IsSpecialTile__c</fullName>
    <formula>AND(
    IsTile__c,
    OR(
        ISPICKVAL(SalesUnit__c, &quot;PZS&quot;),
        ISPICKVAL(SalesUnit__c, &quot;UN&quot;)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Special Tile</label>
    <type>Checkbox</type>
</CustomField>