force-app/main/default/objects/Product2/fields/IsTile__c.field-meta.xml
<CustomField>
    <fullName>IsTile__c</fullName>
    <description>True si es cerámica</description>
    <formula>OR(
   SAPItemGroup__r.SAPGroup__c = &quot;PT0001&quot;,
   SAPItemGroup__r.SAPGroup__c = &quot;PT0002&quot;,
   SAPItemGroup__r.SAPGroup__c = &quot;PT0003&quot;,
   SAPItemGroup__r.SAPGroup__c = &quot;PT0069&quot;,
   SAPItemGroup__r.SAPGroup__c = &quot;PT0097&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Tile</label>
    <type>Checkbox</type>
</CustomField>