force-app/main/default/objects/Product2/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>XXXItem Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Item_Type</valueSetName>
    </valueSet>
</CustomField>