force-app/main/default/objects/Product2/fields/Jerarquia__c.field-meta.xml
<CustomField>
    <fullName>Jerarquia__c</fullName>
    <label>Jerarquia</label>
    <length>18</length>
    <type>Text</type>
</CustomField>