force-app/main/default/objects/Product2/fields/Longitud__c.field-meta.xml
<CustomField>
    <fullName>Longitud__c</fullName>
    <label>Longitud</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>