force-app/main/default/objects/Product2/fields/M2XBox__c.field-meta.xml
<CustomField>
    <fullName>M2XBox__c</fullName>
    <description>Metres in a box</description>
    <label>M2/Box</label>
    <precision>13</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>