force-app/main/default/objects/Product2/fields/Modificado__c.field-meta.xml
<CustomField>
    <fullName>Modificado__c</fullName>
    <label>Modificado</label>
    <type>DateTime</type>
</CustomField>