force-app/main/default/objects/Product2/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <label>XXXNombre</label>
    <length>255</length>
    <translateData>true</translateData>
    <type>Text</type>
</CustomField>