force-app/main/default/objects/Product2/fields/PcsXBox__c.field-meta.xml
<CustomField>
    <fullName>PcsXBox__c</fullName>
    <description>Pieces in a box</description>
    <label>Pcs/Box</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>