force-app/main/default/objects/Product2/fields/PesoUMV__c.field-meta.xml
<CustomField>
    <fullName>PesoUMV__c</fullName>
    <label>Weight UMV (Kg)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>