force-app/main/default/objects/Product2/fields/Ramo__c.field-meta.xml
<CustomField>
    <fullName>Ramo__c</fullName>
    <label>Ramo</label>
    <length>1</length>
    <type>Text</type>
</CustomField>