force-app/main/default/objects/Product2/fields/SalesUnit__c.field-meta.xml
<CustomField>
    <fullName>SalesUnit__c</fullName>
    <description>Minimum unit this product can be sold in</description>
    <label>Sales Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductUnits</valueSetName>
    </valueSet>
</CustomField>