force-app/main/default/objects/Product2/fields/SAPFactory__c.field-meta.xml
<CustomField>
    <fullName>SAPFactory__c</fullName>
    <description>Sets the factory code from the make name, for example, 001 for L&apos;ANTIC or 002 for PORCELANSOA</description>
    <formula>CASE(
        SAPMake__c,
        &quot;L&quot;, &quot;001&quot;,
        &quot;P&quot;, &quot;002&quot;,
        &quot;N&quot;, &quot;006&quot;,
        &quot;S&quot;, &quot;008&quot;,
        &quot;G&quot;, &quot;009&quot;,
        &quot;B&quot;, &quot;007&quot;,
        &quot;X&quot;, &quot;002&quot;,
        &quot;000&quot;  /* Default value for other cases */
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Factory Code</label>
    <type>Text</type>
</CustomField>