force-app/main/default/objects/Product2/fields/SAPItemGroup__c.field-meta.xml
<CustomField>
    <fullName>SAPItemGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to itemGroup, equivalento Grupo de Artículos SAP</description>
    <label>SAP Item Group</label>
    <referenceTo>ItemGroup__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>