force-app/main/default/objects/Product2/fields/SAPMake__c.field-meta.xml
<CustomField>
    <fullName>SAPMake__c</fullName>
    <description>SAP make initial (P, B, L, etc)</description>
    <label>SAP Make</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SAPMakes</valueSetName>
    </valueSet>
</CustomField>