force-app/main/default/objects/Product2/fields/SAPMaterialType__c.field-meta.xml
<CustomField>
    <fullName>SAPMaterialType__c</fullName>
    <description>SAP Material Type (MARA MTART). Can be used to identify spares.</description>
    <label>SAP Material Type</label>
    <length>4</length>
    <type>Text</type>
</CustomField>