force-app/main/default/objects/Product2/fields/StockUnit__c.field-meta.xml
<CustomField>
    <fullName>StockUnit__c</fullName>
    <description>Unit the product t is stocked in</description>
    <label>Stock Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductUnits</valueSetName>
    </valueSet>
</CustomField>