force-app/main/default/objects/Product2/fields/Umb__c.field-meta.xml
<CustomField>
    <fullName>Umb__c</fullName>
    <label>Umb</label>
    <length>3</length>
    <type>Text</type>
</CustomField>