force-app/main/default/objects/Product2/fields/UmbCj__c.field-meta.xml
<CustomField>
    <fullName>UmbCj__c</fullName>
    <label>UmbCj</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>