force-app/main/default/objects/Product2/fields/UmbKg__c.field-meta.xml
<CustomField>
    <fullName>UmbKg__c</fullName>
    <label>UmbKg</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>