force-app/main/default/objects/Product2/fields/UmbMt2__c.field-meta.xml
<CustomField>
    <fullName>UmbMt2__c</fullName>
    <label>UmbMt2</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>