force-app/main/default/objects/Product2/fields/UmbPal__c.field-meta.xml
<CustomField>
    <fullName>UmbPal__c</fullName>
    <label>UmbPal</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>