force-app/main/default/objects/Product2/fields/Umv__c.field-meta.xml
<CustomField>
    <fullName>Umv__c</fullName>
    <label>Umv</label>
    <length>10</length>
    <translateData>true</translateData>
    <type>Text</type>
</CustomField>