force-app/main/default/objects/Product2/fields/UnitsXBox__c.field-meta.xml
<CustomField>
    <fullName>UnitsXBox__c</fullName>
    <description>Stock Units in a box</description>
    <label>Units/Box</label>
    <precision>11</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>