force-app/main/default/objects/Product2/fields/UnitsXM2__c.field-meta.xml
<CustomField>
    <fullName>UnitsXM2__c</fullName>
    <description>Stock units in a squiare metre</description>
    <label>Units/M2</label>
    <precision>11</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>