force-app/main/default/objects/Product2/fields/UnitsXPal__c.field-meta.xml
<CustomField>
    <fullName>UnitsXPal__c</fullName>
    <description>Stock units in a pallet</description>
    <label>Units/Pallet</label>
    <precision>11</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>