force-app/main/default/objects/Product2/fields/UnitWeight__c.field-meta.xml
<CustomField>
    <fullName>UnitWeight__c</fullName>
    <label>Unit Weight (Kg)</label>
    <precision>11</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>