force-app/main/default/objects/Product2/fields/URL_PDF__c.field-meta.xml
<CustomField>
    <fullName>URL_PDF__c</fullName>
    <label>URL PDF</label>
    <type>Url</type>
</CustomField>