force-app/main/default/objects/Product2/fields/URL_Photo_1__c.field-meta.xml
<CustomField>
    <fullName>URL_Photo_1__c</fullName>
    <label>URL Photo 1</label>
    <type>Url</type>
</CustomField>