force-app/main/default/objects/Product2/fields/URL_Photo_2__c.field-meta.xml
<CustomField>
    <fullName>URL_Photo_2__c</fullName>
    <label>URL Photo 2</label>
    <type>Url</type>
</CustomField>