force-app/main/default/objects/Product2/fields/URL_Photo_3__c.field-meta.xml
<CustomField>
    <fullName>URL_Photo_3__c</fullName>
    <label>URL Photo 3</label>
    <type>Url</type>
</CustomField>