force-app/main/default/objects/Product2/fields/XXXNBK_Sample__c.field-meta.xml
<CustomField>
    <fullName>XXXNBK_Sample__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NO USAR</description>
    <inlineHelpText>NO USAR</inlineHelpText>
    <label>XXXMuestra</label>
    <type>Checkbox</type>
</CustomField>